<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="8"
    tools:context="com.example.moises.tarea_unidad_5_pmdm.Registro">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="REGISTRO"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_rowSpan="1"
        android:contextClickable="false"
        android:textIsSelectable="false"
        android:gravity="center"
        android:textColor="#ff0000"
        android:textSize="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/hintNombre"
        android:textSize="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_row="3"
        android:layout_column="0"
        android:hint="@string/hintEmail"
        android:textSize="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edad"
        android:layout_row="4"
        android:layout_column="0"
        android:hint="@string/hintEdad"
        android:textSize="40dp"
        android:inputType="number" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="5"
        android:layout_column="0">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textValidar"
            android:id="@+id/validar"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="30dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVolver"
            android:id="@+id/volver"
            android:layout_row="5"
            android:layout_column="1"
            android:textSize="30dp" />
    </LinearLayout>



</GridLayout>
