<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.moises.tarea_unidad_5_pmdm.Loterias">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loterias"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#ff0000"
            android:textSize="40dp"
            android:layout_columnSpan="3" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imagenLoteriaNacional"
            android:layout_row="1"
            android:layout_column="0"
            android:src="@drawable/loteria_nacional" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imagenBonoLoto"
            android:layout_row="2"
            android:layout_column="0"
            android:nestedScrollingEnabled="false"
            android:src="@drawable/bonoloto" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@string/bonoLoto"
            android:id="@+id/checkBonoloto"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="30dp"
            android:layout_gravity="top|bottom"
            android:layout_columnSpan="2" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageEuromillones"
            android:layout_row="3"
            android:layout_column="0"
            android:src="@drawable/euromillones" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@string/euromillones"
            android:id="@+id/checkEuromillones"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="30dp"
            android:layout_gravity="top|bottom"
            android:layout_columnSpan="2" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageGordo"
            android:layout_row="4"
            android:layout_column="0"
            android:src="@drawable/gordo" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\@string/loteriaNacional"
            android:id="@+id/checkLoteriaNacional"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="top|bottom"
            android:textSize="30dp"
            android:layout_columnSpan="2" />

        <CheckBox
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="\@string/gordo"
            android:id="@+id/checkGordo"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="30dp"
            android:layout_columnSpan="2"
            android:layout_gravity="top|bottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/aceptar"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textSize="35dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVolver"
            android:id="@+id/volver"
            android:layout_row="5"
            android:layout_column="2"
            android:textSize="35dp" />
    </GridLayout>
</RelativeLayout>
